samples/_failures_safe/1761619420_344631_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd431ac5.c: In function ‘main’:
./samples/SAFE/__tmp_dd431ac5.c:175:25: error: expected ‘;’ at end of input
  175 |         transition_state
      |                         ^
      |                         ;
./samples/SAFE/__tmp_dd431ac5.c:175:9: error: expected declaration or statement at end of input
  175 |         transition_state
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dd431ac5.c:175:9: error: expected declaration or statement at end of input
